fix: remove custom select arrow in dark mode

--- a/src/scss/utilities/_utility-global-dark.scss
+++ b/src/scss/utilities/_utility-global-dark.scss
@@ -111,6 +111,19 @@ select:not([size]):not([multiple]) {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23f0f0f0' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e");
 }
 
+// IE9 only hack
+// https://gist.github.com/marcop135/cf5163ab23d1cb208248b955c990b2ea#ie-9-only
+@media screen and (min-width:0\0) and (min-resolution: .001dpcm) { 
+
+  // re-set the default properties
+  select:not([size]):not([multiple]),
+  // RTL
+  *[dir="rtl"] select:not([size]):not([multiple]),
+  select[dir="rtl"]:not([size]):not([multiple]) {
+    background-image: none;
+  }
+}
+
 input::placeholder,
 textarea::placeholder {
   color: $bf-gray;
